bin: Improve default trytond.conf (#2228)
Fix #0000

--- a/bin/conf/trytond.conf
+++ b/bin/conf/trytond.conf
@@ -1,41 +1,418 @@
+#######
+# Web #
+#######
 [web]
-listen = localhost:8000
+# listen: The url the tryton server will listen on
+# default: localhost:8000
 
+# root: The place where sao will be available if needed
+# Can be overriden with $TRYTOND_WEB_ROOT
+# example: root = /usr/local/lib/sao
+
+# (trytond-bench) bench: the place where the benchmark UI files are available
+# Can be overriden with $TRYTOND_WEB_BENCH
+
+# hostname: The hostname to which the server will respond
+# default: *
+
+# (coog_core) log_time_threshold: If set, the performance debug mode is used.
+# Server logs will display the timed version of each rpc call, rather than
+# their content. A call whose value exceeds this limit (in seconds) will be
+# printed at INFO level, other as DEBUG
+# example: log_time_threshold = 0.1
+
+####################
+# Database Section #
+####################
 [database]
+# uri: The database url that will be used by the server. The pattern is:
+#
+#     <db_type>://<username>:<password>@<host>:<port>/<db_name>
+#
+# So for a postgresql instance:
+#
+#     postgresql://tryton:tryton@localhost:5432/my_db_name
+#
+# Note the that "db_name" part is optionnal. Setting one will make the server
+# initializing the pool for this database on startup, rather than waiting for
+# an incoming connection
+#
+# default: sqlite://
 uri = postgresql://postgres:postgres@localhost:5432/coog
+
+# language: The default language for the database, which is used to store
+# translatable entries in the main tables columns
+# default: en
 language = fr
 
+# retry: The number of retries of the Tryton Server when there are errors
+# in a request to the database
+# default: 5
+
+# path : the path to the directory where the Tryton Server stores files.
+# The server must have write permissions to this directory.
+# (Internal default: /var/lib/trytond)
+# path = /var/lib/tryton
+
+# (coog_core) env_name: The string that will be used in the client to identify
+# the running environnment. Can use %{DB} to reuse the database name.
+# example: Coog - %{DB}
+
+# (coog_core) color: It is possible to set the background color for the client
+# depending on the database. That can be done by defining a key with the
+# database name in the database section, and the hex value of the color as
+# value
+# example: my_database = 00FF00
+
+# class: The class that will be used to manage File stores.
+# default: trytond.filestore.Filestore
+
+# minconn: The minimum number of connections in the connection pool that will
+# be used by tryton
+# default: 1
+
+# maxconn: The maximum number of connections in the connection pool that will
+# be used by tryton
+# default: 64
+
+#######
+# SSL #
+#######
+[ssl]
+# private_key: The path to the ssl private key
+# privatekey = /etc/ssl/private/ssl-mysite.key
+
+# certificate: The path to the ssl certificate
+# certificate = /etc/ssl/certs/ssl-mysite.pem
+
+###########
+# Session #
+###########
 [session]
+# super_pwd: The server administration password used by the client for
+# the execution of database management tasks. It is encrypted
+# using using the Unix crypt(3) routine. A password can be
+# generated using the following command line (on one line):
+#
+#     python -c 'import getpass,crypt,random,string; \
+#        print crypt.crypt(getpass.getpass(), \
+#        "".join(random.sample(string.ascii_letters + string.digits, 8)))'
+# Example password with 'admin': jkUbZGvFNeugk
+# default: empty
 super_pwd =
-timeout = 1800
 
-[options]
-table_dimension = 10
-default_country = FR
-phone_prefix = +33
+# timeout: The time (in seconds) until an inactive session expires
+# default: 3600
 
+# max_attempt: The number of time a user can try to access its account before
+# an administrator has to unlock it
+# default: 5
+
+# authentications: The authentications methods to use for login. New methods
+# can be added by custom modules
+# default: password
+
+# use redis as a session store
+# default behaviour: no redis (session is stored on database)
+redis = redis://localhost:6379/3
+
+# make it possible for a user to have more than an active session
+# it works only when redis is active
+# default behaviour: exclusive = True
+exclusive = True
+
+############
+# Password #
+############
+[password]
+# length: The minimum size of the password
+# default: 8
+
+# entropy: The minimum entropy (i.e. complexity) for the password. Calculated
+# as the number of distinct letters divided by the length of the password
+# default: 0.75
+
+# forbidden: the folder in which the 'forbidden.txt' file can be found. This
+# file contains a list of "forbidden" passwords
+# default: empty
+
+#########
+# Email #
+#########
+[email]
+# uri: The URI to connect to the SMTP server.
+# Available protocols are:
+# - smtp: simple SMTP
+# - smtp+tls: SMTP with STARTTLS
+# - smtps: SMTP with SSL
+# default: smtp://localhost:25
+
+# from: The From address used by the Tryton Server to send emails.
+# default: tryton@localhost
+
+#########
+# Cache #
+#########
 [cache]
+# model: The number of models whose values will be kept in the cache
+# default: 200
+
+# record: The number of records for a given model which will be kept in the
+# cache at a given time. Consider increasing it if your code may manipulate
+# record lists whose size is greater than this value
+# default: 2000
+record = 10000
+
+# field: The number of field per records whose values will be kept in the cache
+# Should probably be enough, since a model with more than 100 fields seems a
+# problem in itself
+# default: 100
+
+# (coog_core) class: The class that will be used as a cache holder. Possible
+# values are:
+#     trytond.cache.MemoryCache: Basic in memory cache
+#     trytond.cache.SerializableMemoryCache: Idem, but excluding non
+#       serializable data
+#     trytond.cache_redis.RedisCache: Distributed cache which uses a redis
+#       instance to share cache information across trytond processes
+# Can be overriden with $TRYTOND_CACHE_CLASS
+# default: trytond.cache.SerializableMemoryCache
 class = trytond.cache_redis.RedisCache
+
+# (coog_core) uri: For redis class cache, the uri of the redis instance /
+# database to use
+# Can be overriden with $TRYTOND_CACHE_URI
+# example: redis://localhost:6379/0
 uri = redis://localhost:6379/0
 
-[async]
-rq = redis://localhost:6379/1
-celery = redis://localhost:6379/2
+# (coog_core) coog_cache_size: The size of the custom redis cache
+# default: 1024
 
-[batch]
-log_dir = /tmp
+# (coog_core) disable_fields_view_get_cache: If True, the views will not be
+# stored in the server cache. This is useful to help for development, but
+# should NOT be enabled on a production server
+# default: False
+disable_fields_view_get_cache = True
 
+##########
+# Report #
+##########
+[report]
+# unoconv: Unoconv parameters for connection to the unoconv service.
+# default: pipe,name=trytond;urp;StarOffice.ComponentContext
+unoconv = True
+
+# (report_engine) export_root_dir: The place in which generated documents will
+# be exported if configured so
+
+##########
+# Sentry #
+##########
 [sentry]
-# dsn=http://admin:admin@localhost:9000/sentry
+# (coog_core) dsn: The dsn to a sentry instance that can be used to handle
+# errors
+# Can be overriden with $TRYTOND_SENTRY_DSN
 
+#######################
+# Ldap Authentication #
+# #####################
+[ldap_authentication]
+# uri: The URI to connect to the LDAP server.
+#
+#   uri = ldap://host:port/dn?attributes?scope?filter?extensions
+#
+# A basic default URL could look like
+# uri = ldap://localhost:389/
+
+#######
+# Env #
+#######
+[env]
+# (coog_core) testing: Used to mark an environment as a testing environment
+# default: False
+
+#######
+# TMP #
+#######
+[TMP]
+# (coog_core) folder: Where temporary folder will be created when using file
+# locks
+# default: /tmp
+
+##############
+# Attachment #
+##############
+[attachment]
+# store_prefix: The prefix to prepend to attachments paths in the database
+# default: empty
+
+#######
+# EDM #
+#######
 [EDM]
+# (report_engine) server_shared_folder: The place in which the generated
+# documents will be placed by the server
+# default: /tmp
 server_shared_folder = /tmp
+
+# (report_engine) server_shared_folder: The place from which the client will be
+# able to access the server_shared_folder
+# example: \\WORKSPACE\shared_files\Coog
 client_shared_folder = /tmp
 xml_dir = /tmp
 
-# [perf]
-# broker = redis://127.0.0.1:6379/15
-# users = debug
-# profile = model.ir.ui.menu.read
-# db = model.ir.ui.menu.read
-# query = 0.2
+###########
+# Options #
+###########
+[options]
+# (country_cog) default_country: The code of the country that will be used by
+# default when creating a new party
+# default: empty
+default_country = FR
+
+# (table) table_dimension: The maximum number of dimensions in the application
+# instance. Modifying it requires an update on the table module
+# default: 4
+table_dimension = 10
+
+# (party_cog) phone_prefix: The default prefix for phone numbers. It will
+# automatically added to phone numbers inputs if no international prefix
+# already exists
+# default: +33
+
+###########
+# Version #
+###########
+[version]
+# (coog_core) module: The name of the module whose version will be considered
+# the global version of the application
+# default: coog_core
+module = prevere
+
+#########
+# Async #
+#########
+[async]
+# (coog_core) rq: The redis uri that will be used as a message broker for
+# asynchronous jobs with rq
+# default: empty
+rq = redis://localhost:6379/1
+#
+# (coog_core) celery: The redis uri that will be used as a message broker for
+# asynchronous jobs with celery
+# default: empty
+celery = redis://localhost:6379/2
+
+#########
+# Batch #
+#########
+[batch]
+log_dir = /tmp
+
+################
+# Sepa Payment #
+################
+[sepa_payment]
+# (account_payment_sepa_cog) out_dir: The place where sepa messages should be
+# automatically placed after generation
+# default: empty
+
+#########
+# Table #
+#########
+[table]
+# The table session is used to map model names to table names in case the
+# automatically generated name is not suitable (too long for instance).
+# example: party.party = party
+
+#########
+# Debug #
+#########
+[debug]
+# (debug) methods: The comma-separated list of methods that will be patched to
+# include the model on which they were called in the stack traces
+# example: methods = read,search,create
+
+# (debug) fields_methods: The comma-separated list of methods that should be
+# patched on fields for better identification in stack traces
+# example: fields_methods: get,set
+
+# (debug) auto_profile_threshold: The minimum duration (in seconds) of method
+# calls to display if auto_profiling is enabled. Calls that exceed this
+# duration will still be profiled, but the result will not be displayed in the
+# server log
+# default: 0
+
+# (debug) disable_syntax_analysis: If True, the syntax analysis parser will be
+# deactivated when starting the server. This is useful to increase performances
+# on startup, though the parser can sometimes find interesting errors
+# default: False
+disable_syntax_analysis = True
+
+# (debug) debug_views: If True, a special view will be accessible on all
+# models, which displays all fields in a "developer view"
+# default: False
+
+# (debug) ignore_passwords: If True, any password will be accepted for logging
+# in. Should obviously never be activated in a real (i.e. not testing)
+# environment
+# default: False
+
+##################
+# Auto-profiling #
+##################
+[auto_profile]
+# (debug) The content of this section should be a list of model names paired
+# with a comma-separated list of methods to auto-profile for this model:
+# example: party_party = read,write
+
+########
+# Perf #
+########
+[perf]
+# (coog_core) broker: The local redis uri that will be used to store perf
+# analysis results
+# example: redis://127.0.01:6379/15
+
+# (coog_core) users: The comma separated list of users whose actions will be
+# analysed
+# example: debug
+
+# (coog_core) profile: The name of the rpc call that must be analysed
+# example: model.ir.ui.menu.read
+
+# (coog_core) db: The name of the rpc call whose query times will be logged
+# example: model.ir.ui.menu.read
+
+# (coog_core) query: The minimum duration of a query to trigger in-depth
+# analysis. In seconds
+# example: 0.2
+
+#############
+# Cryptolog #
+#############
+[cryptolog]
+# (cryptolog) url: The url to the cryptolog service
+# (cryptolog) no_verify: If "1", the verification process will be ignored
+# (cryptolog) success-url: The callback url for the cryptolog service in case
+# of success
+# (cryptolog) fail-url: The callback url for the cryptolog service in case
+# of failure
+# (cryptolog) cancel-url: The callback url for the cryptolog service in case
+# of cancellation
+# (cryptolog) auth_mode: The authentication mode to connect to cryptolog. The
+# only supported value for now is "basic"
+# (cryptolog) username: The username to use when connecting to the cryptolog
+# service
+# (cryptolog) password: The password to use when connecting to the cryptolog
+# service
+
+############
+# Migrator #
+############
+[migrator]
+# (migrator) host: The host of the source database for migrating
+# (migrator) user: The user of the source database for migrating
+# (migrator) password: The password of the source database for migrating
+# (migrator) database: The database name of the source database for migrating
+# (migrator) schema: The schema of the source database for migrating
