party_cog: Merge with country_address_configuration (#2248)
Fix #5633

--- a/modules/party_cog/tryton.cfg
+++ b/modules/party_cog/tryton.cfg
@@ -7,7 +7,6 @@ depends:
     coog_core
     country_cog
     party_relationship
-    country_address_configuration
 extras_depend:
     party_siret
     account
@@ -15,6 +14,7 @@ extras_depend:
 xml:
     icon.xml
     party.xml
+    country.xml
     address.xml
     contact_mechanism.xml
     category.xml
