account_invoice_slip: Module creation (#2233)
Fix #9974

--- a/modules/commission_insurer/tryton.cfg
+++ b/modules/commission_insurer/tryton.cfg
@@ -8,11 +8,11 @@ depends:
     company
     ir
     party
+    account_invoice_slip
 extras_depend:
     commission_multi_agents
 xml:
     commission.xml
-    account.xml
     move.xml
     invoice.xml
     configuration.xml
