claim_group_life_fr: Add default eligibility decision handled in default deductible rules (#2260)
Fix #10139

--- a/modules/claim_group_life_fr/tryton.cfg
+++ b/modules/claim_group_life_fr/tryton.cfg
@@ -7,6 +7,8 @@ depends:
     claim_life
     claim_indemnification
     claim_deduction_period
+extras_depend:
+    claim_eligibility
 xml:
     claim.xml
     benefit.xml
