claim_pasrau: handle pasrau slips (#2272)
Fix #10156

--- a/modules/claim_pasrau/tryton.cfg
+++ b/modules/claim_pasrau/tryton.cfg
@@ -8,8 +8,11 @@ depends:
     account_cog
     claim_indemnification
     party_ssn
+    account_invoice_slip
 xml:
     pasrau.xml
     default_rates.xml
     wizard.xml
+    account.xml
+    slip.xml
     authorizations.xml
