conf: Add listen address to default conf

--- a/bin/conf/trytond.conf
+++ b/bin/conf/trytond.conf
@@ -4,6 +4,7 @@
 [web]
 # listen: The url the tryton server will listen on
 # default: localhost:8000
+listen = localhost:8000
 
 # root: The place where sao will be available if needed
 # Can be overriden with $TRYTOND_WEB_ROOT
