Remove default value for redis config

--- a/bin/conf/trytond.conf
+++ b/bin/conf/trytond.conf
@@ -115,7 +115,7 @@ super_pwd =
 
 # use redis as a session store
 # default behaviour: no redis (session is stored on database)
-redis = redis://localhost:6379/3
+# Example : redis = redis://localhost:6379/3
 
 # make it possible for a user to have more than an active session
 # it works only when redis is active
