dsn_standard: add module and use it in claim_pasrau (#2304)
Fix #10117
Fix #10119
Fix #10122

--- a/modules/claim_pasrau/tryton.cfg
+++ b/modules/claim_pasrau/tryton.cfg
@@ -9,6 +9,7 @@ depends:
     claim_indemnification
     party_ssn
     account_invoice_slip
+    dsn_standard
 xml:
     pasrau.xml
     default_rates.xml
@@ -16,3 +17,5 @@ xml:
     account.xml
     slip.xml
     authorizations.xml
+    invoice.xml
+    message.xml
