claim_group_life_fr: default ltd rules (#2284)
Fix #10124

--- a/modules/claim_group_life_fr/tryton.cfg
+++ b/modules/claim_group_life_fr/tryton.cfg
@@ -9,6 +9,7 @@ depends:
     claim_deduction_period
 extras_depend:
     claim_eligibility
+    claim_salary_fr
 xml:
     claim.xml
     benefit.xml
