claim_reporting: remove dependency with commission related modules (#2417)
Fix #10435

--- a/modules/commission_insurer/tryton.cfg
+++ b/modules/commission_insurer/tryton.cfg
@@ -9,6 +9,7 @@ depends:
     ir
     party
     account_invoice_slip
+    insurer_reporting
 extras_depend:
     commission_multi_agents
 xml:
@@ -17,4 +18,5 @@ xml:
     invoice.xml
     configuration.xml
     party.xml
+    report_template.xml
     authorizations.xml
