claim_reporting: add claim reporting default template (#2449)
Fix #9817

--- a/modules/claim_reporting/tryton.cfg
+++ b/modules/claim_reporting/tryton.cfg
@@ -4,7 +4,8 @@ depends:
     ir
     res
     insurer_reporting
-    claim
+    claim_indemnification
 xml:
     wizard.xml
     authorizations.xml
+    report_engine.xml
