account_invoice_slip: Break claim/commission insurer dependency (#2455)
Fix #10638

--- a/modules/account_invoice_slip/tryton.cfg
+++ b/modules/account_invoice_slip/tryton.cfg
@@ -5,8 +5,11 @@ depends:
     res
     coog_core
     account_invoice_cog
+extras_depend:
+    offered_insurance
 xml:
     account.xml
     slip.xml
     wizard.xml
     authorizations.xml
+    insurer.xml
