--- a/modules/claim_insurer/tryton.cfg
+++ b/modules/claim_insurer/tryton.cfg
@@ -4,9 +4,9 @@ depends:
     ir
     res
     coog_core
-    commission_insurer
-    commission_insurance
     claim_indemnification
     report_engine
+    account_invoice_slip
 xml:
     account.xml
+    event_type.xml
