contract_insurance_health_fr: Add madelin law reporting batch (#2502)
Fix #10793

--- a/modules/contract_insurance_health_fr/tryton.cfg
+++ b/modules/contract_insurance_health_fr/tryton.cfg
@@ -7,9 +7,12 @@ depends:
     party_fr
     health
     contract_insurance
+extras_depend:
+    contract_insurance_invoice
 xml:
     health.xml
     party.xml
     rule_engine.xml
+    offered.xml
     test_case.xml
     authorizations.xml
