claim: Add claim bank account on contracts (#2645)
claim: Add claim bank account on contracts

Fix #11113

--- a/modules/claim/tryton.cfg
+++ b/modules/claim/tryton.cfg
@@ -7,9 +7,11 @@ depends:
     company_cog
     contract_insurance
     report_engine
+    bank_cog
 extras_depend:
     event_log
     account_aggregate
+    endorsement
 xml:
     icons.xml
     claim.xml
@@ -26,3 +28,5 @@ xml:
     event_type.xml
     general_configuration.xml
     authorizations.xml
+    endorsement.xml
+    contract.xml
