--- a/modules/claim_indemnification/tryton.cfg
+++ b/modules/claim_indemnification/tryton.cfg
@@ -8,6 +8,7 @@ depends:
     product_cog
     claim
     account_payment_clearing_cog
+    account_payment_sepa_cog
 extras_depend:
     contract_insurance_payment
 xml:
