reporte_engine: add user notification for async report production (#2708)
Fix #11413

--- a/bin/conf/trytond.conf
+++ b/bin/conf/trytond.conf
@@ -416,3 +416,10 @@ disable_syntax_analysis = True
 # (migrator) password: The password of the source database for migrating
 # (migrator) database: The database name of the source database for migrating
 # (migrator) schema: The schema of the source database for migrating
+
+#######
+# Bus #
+#######
+[bus]
+# (bus) allow_subscribe: Activate client notifications
+allow_subscribe = 1
