--- a/modules/account_payment_clearing_cog/tryton.cfg
+++ b/modules/account_payment_clearing_cog/tryton.cfg
@@ -3,8 +3,10 @@ version=2.5.0
 depends:
     ir
     res
-    account_payment_clearing
     coog_core
+    account_payment_clearing
     account_payment_cog
+extras_depend:
+    account_aggregate
 xml:
     payment.xml
