api: Add identities management (#2774)
Fix #11623

--- a/modules/party_cog/tryton.cfg
+++ b/modules/party_cog/tryton.cfg
@@ -11,6 +11,7 @@ extras_depend:
     party_siret
     account
     account_payment_sepa
+    api
 xml:
     icon.xml
     party.xml
@@ -22,3 +23,4 @@ xml:
     relationship.xml
     general_configuration.xml
     authorizations.xml
+    api.xml
