third_party_right_management: Module creation (#2770)
Fix #11374

--- a/modules/third_party_management/tryton.cfg
+++ b/modules/third_party_management/tryton.cfg
@@ -5,7 +5,10 @@ depends:
     res
     coog_core
     party_cog
+    rule_engine
 extras_depend:
     offered_insurance
+    account_dunning_cog
 xml:
     party.xml
+    authorizations.xml
