third_party_protocol_almerys: Add XML generation batch (#2849)
Fix #11526

--- a/modules/third_party_protocol_almerys/tryton.cfg
+++ b/modules/third_party_protocol_almerys/tryton.cfg
@@ -4,7 +4,12 @@ depends:
     ir
     res
     coog_core
+    bank_fr
     party_ssn
+    party_relationship
+    claim
+    contract_insurance_health_fr
+    contract_distribution
     third_party_right_management
 xml:
     protocol.xml
