third_party_protocol_almerys: Fix issues detected after first run of the batch (#2894)

--- a/modules/third_party_protocol_almerys/tryton.cfg
+++ b/modules/third_party_protocol_almerys/tryton.cfg
@@ -10,6 +10,7 @@ depends:
     claim
     contract_insurance_health_fr
     contract_distribution
+    contract_noemie
     third_party_right_management
 xml:
     protocol.xml
