party_employment: Add employment data in rule_engine. (#2880)

--- a/modules/party_employment/tryton.cfg
+++ b/modules/party_employment/tryton.cfg
@@ -5,7 +5,9 @@ depends:
     res
     coog_core
     party_cog
+    rule_engine
+    contract_insurance
 xml:
     party.xml
     authorizations.xml
-
+    rule_engine.xml
