bin: Add default batch configuration (#2908)
Fix #00000

--- a/bin/conf/batch.conf
+++ b/bin/conf/batch.conf
@@ -39,3 +39,75 @@ job_size=0
 
 [account.payment.group.process]
 cache_size=100000
+
+[country.zipcode.update_from_hexapost]
+archive_path=
+hexa_post_file_path=
+
+[prest_ij.subscription.process]
+output_dir=
+
+[gestip.flux.process]
+directory=
+
+[prest_ij.periods.batch]
+directory=
+
+[party.pasrau.rate.batch]
+directory=
+
+[third_party_protocol.batch.almerys]
+directory=
+
+[bank.mobility]
+in_directory=
+archive=
+
+[account.payment.fail]
+in_directory=
+
+[account.payment.fail.message.create]
+in_directory=
+archive=
+
+[madelin.law.report]
+template_code=
+
+[insurer_reporting.contract.generate]
+products=
+possible_days=
+
+[account.move.aggregated.extract]
+flush_size=
+output_file_name=
+output_dir=
+
+[report_production.contract_request.create]
+products=
+
+[account.aged_balance.generate]
+term1=
+term2=
+term3=
+posted=
+unit=
+type=
+
+[desynchronized.prepayment.report]
+filename=
+auto_adjust=
+
+[desynchronized.redeemed.report]
+filename=
+auto_adjust=
+
+[contract.noemie.flow.batch]
+in_directory=
+out_directory=
+
+[report_production.request.batch_treat]
+job_size=1
+
+[account.move.aggregated.extract]
+flush_size=
+analytic=
