--- a/modules/offered/package.xml
+++ b/modules/offered/package.xml
@@ -14,6 +14,17 @@ this repository contains the full copyright notices and license terms. -->
             <field name="type">tree</field>
             <field name="name">package_list</field>
         </record>
+        <record model="ir.ui.view" id="package_option_relation_view_form">
+            <field name="model">offered.package-option.description</field>
+            <field name="name">package_option_relation_form</field>
+            <field name="type">form</field>
+            <field name="inherit" eval="None"/>
+        </record>
+        <record model="ir.ui.view" id="package_option_relation_view_list">
+            <field name="model">offered.package-option.description</field>
+            <field name="type">tree</field>
+            <field name="name">package_option_relation_list</field>
+        </record>
         <record model="ir.action.act_window" id="act_package">
             <field name="name">Package</field>
             <field name="res_model">offered.package</field>
