claim_health: Add claim_life dependency (#2946)

--- a/modules/claim_health/tryton.cfg
+++ b/modules/claim_health/tryton.cfg
@@ -6,6 +6,7 @@ depends:
     claim
     health
     bank_cog
+    claim_life
 extras_depend:
     endorsement_insurance
     contract_insurance_invoice
