questionnaire: Multi Part, backoffice management (#2858)
Fix #11785

--- a/modules/questionnaire/tryton.cfg
+++ b/modules/questionnaire/tryton.cfg
@@ -4,8 +4,17 @@ depends:
     ir
     res
     coog_core
+    company_cog
     rule_engine
     offered
+extras_depend:
+    api
+    contract
+    contract_process
+    contract_distribution
 xml:
-	icons.xml
+    icons.xml
     questionnaire.xml
+    wizard.xml
+    contract.xml
+    authorizations.xml
