contract: Add subscription API (#2954)
Fix #11970

--- a/modules/commission_insurance/tryton.cfg
+++ b/modules/commission_insurance/tryton.cfg
@@ -12,6 +12,7 @@ depends:
     distribution
     contract_distribution
 extras_depend:
+    api
     account_aggregate
     report_engine
     report_engine_email
