--- a/modules/contract_distribution/tryton.cfg
+++ b/modules/contract_distribution/tryton.cfg
@@ -8,7 +8,9 @@ depends:
     offered
     contract
 extras_depend:
+    api
     contract_process
+    contract_insurance_invoice
 xml:
     distribution.xml
     contract.xml
