--- a/modules/distribution_channel/tryton.cfg
+++ b/modules/distribution_channel/tryton.cfg
@@ -6,6 +6,8 @@ depends:
     commission_insurance
     contract_process
     contract_distribution
+extras_depend:
+    api
 xml:
     distribution.xml
     channel_type.xml
