third_party_right_management: adapt new code to endorsements (#2918)
Fix #00000

--- a/modules/third_party_right_management/tryton.cfg
+++ b/modules/third_party_right_management/tryton.cfg
@@ -13,7 +13,7 @@ extras_depend:
     contract_insurance_suspension
     endorsement
 xml:
-    offer.xml
+    offered.xml
     protocol.xml
     endorsement.xml
     rule_engine.xml
