contract_noemie: handle noemie during endorsement (#3013)
Fix #11778

--- a/modules/contract_noemie/tryton.cfg
+++ b/modules/contract_noemie/tryton.cfg
@@ -5,7 +5,10 @@ depends:
     res
     offered_insurance
     contract_insurance_health_fr
+extras_depend:
+	endorsement_insurance
 xml:
     contract.xml
     offered.xml
     event_type.xml
+    endorsement.xml
