loan: Manage loan in subscribe contract API (#2981)
Fix #12229

--- a/modules/contract_clause/tryton.cfg
+++ b/modules/contract_clause/tryton.cfg
@@ -1,12 +1,14 @@
 [tryton]
 version=2.5.0
 depends:
-  ir
-  res
-  coog_core
-  contract
-  clause
+    ir
+    res
+    coog_core
+    contract
+    offered_clause
+extras_depend:
+    api
 xml:
-  clause.xml
-  contract.xml
-  authorizations.xml
+    clause.xml
+    contract.xml
+    authorizations.xml
