--- a/modules/contract_life_clause/tryton.cfg
+++ b/modules/contract_life_clause/tryton.cfg
@@ -1,12 +1,14 @@
 [tryton]
 version=2.5.0
 depends:
-  ir
-  res
-  coog_core
-  contract_life
-  offered_life_clause
-  contract_clause
+    ir
+    res
+    coog_core
+    contract_life
+    offered_life_clause
+    contract_clause
+extras_depend:
+    api
 xml:
-  contract.xml
-  authorizations.xml
+    contract.xml
+    authorizations.xml
