--- a/modules/offered_clause/tryton.cfg
+++ b/modules/offered_clause/tryton.cfg
@@ -1,10 +1,12 @@
 [tryton]
 version=2.5.0
 depends:
-  ir
-  res
-  coog_core
-  offered
-  clause
+    ir
+    res
+    coog_core
+    offered
+    clause
+extras_depend:
+    api
 xml:
-  offered.xml
+    offered.xml
