--- a/modules/loan/tryton.cfg
+++ b/modules/loan/tryton.cfg
@@ -10,6 +10,8 @@ extras_depend:
     api
     premium
     commission_insurance
+    contract_insurance_invoice
+    contract_distribution
     offered_eligibility
 xml:
     icon.xml
