contract_underwriting: Allow to add medical notes only visible to a specific group during underwriting (#3028)
Fix #12326

--- a/modules/contract_underwriting/tryton.cfg
+++ b/modules/contract_underwriting/tryton.cfg
@@ -7,8 +7,10 @@ depends:
     contract_life
 extras_depend:
     process_cog
+    note_authorizations
 xml:
     contract.xml
     offered.xml
     rule_template.xml
     authorizations.xml
+    note.xml
