Apply tax rules on taxes of premium (#3001)
Fix #12265

--- a/modules/premium/tryton.cfg
+++ b/modules/premium/tryton.cfg
@@ -5,6 +5,8 @@ depends:
     res
     offered
     contract
+    account
+    account_tax_rule_country
     account_cog
 extras_depend:
     offered_eligibility
