account_payment_paybox_cog: add new method to call in configuration which pays invoices throught Paybox (#3047)
Fix #12377

--- a/modules/account_payment_paybox_cog/tryton.cfg
+++ b/modules/account_payment_paybox_cog/tryton.cfg
@@ -8,5 +8,7 @@ depends:
     account_payment_cog
 extras_depend:
     contract_insurance_payment
+    contract_insurance_invoice
 xml:
     payment.xml
+    offered.xml
