document_request_electronic: Allow to customize electronic signature (#3025)
Fix #12321

--- a/modules/document_request_electronic_signature/tryton.cfg
+++ b/modules/document_request_electronic_signature/tryton.cfg
@@ -3,11 +3,15 @@ version=2.5.0
 depends:
     ir
     res
+    electronic_signature
     coog_core
     report_engine
     document_request
 extras_depend:
+    offered
     contract_insurance_document_request
     claim_process
 xml:
     document.xml
+    extra_data.xml
+    signature.xml
