commission_insurance_rule_engine: Add loan information in commission context (#3120)
Fix #00000

--- a/modules/commission_insurance_rule_engine/tryton.cfg
+++ b/modules/commission_insurance_rule_engine/tryton.cfg
@@ -6,6 +6,8 @@ depends:
     coog_core
     commission_insurance
     rule_engine
+extras_depend:
+    loan
 xml:
     commission.xml
     rule_engine.xml
