--- a/modules/claim_indemnification/tryton.cfg
+++ b/modules/claim_indemnification/tryton.cfg
@@ -11,6 +11,7 @@ depends:
     account_payment_sepa_cog
 extras_depend:
     contract_insurance_payment
+    analytic_contract
 xml:
     icons.xml
     party.xml
