party_employment: Update API to handle employment information (#3106)
Fix #12535

--- a/modules/party_employment/tryton.cfg
+++ b/modules/party_employment/tryton.cfg
@@ -7,6 +7,8 @@ depends:
     party_cog
     rule_engine
     contract_insurance
+extras_depend:
+    api
 xml:
     party.xml
     authorizations.xml
