contract_underwriting: Add underwriting reception API (#3143)
Fix #12685

--- a/modules/loan/tryton.cfg
+++ b/modules/loan/tryton.cfg
@@ -13,6 +13,7 @@ extras_depend:
     contract_insurance_invoice
     contract_distribution
     offered_eligibility
+    contract_underwriting
 xml:
     icon.xml
     loan.xml
