--- a/modules/premium_insurance/tryton.cfg
+++ b/modules/premium_insurance/tryton.cfg
@@ -6,5 +6,8 @@ depends:
     premium
     offered_insurance
     contract_insurance
+extras_depend:
+    api
+    contract_underwriting
 xml:
     contract.xml
