contract_insurance: Allow to define required covered party data for contract activation (#3162)
Fix #12648

--- a/modules/party_birth_data/tryton.cfg
+++ b/modules/party_birth_data/tryton.cfg
@@ -8,6 +8,8 @@ depends:
 extras_depend:
     party_ssn
     country_hexaposte
+    offered_insurance
 xml:
     party.xml
     message.xml
+    offered.xml
