--- a/modules/party_ssn/tryton.cfg
+++ b/modules/party_ssn/tryton.cfg
@@ -5,9 +5,12 @@ depends:
     res
     coog_core
     party_cog
+    offered
 extras_depend:
     api
+    offered_insurance
 xml:
     party.xml
     message.xml
     configuration.xml
+    offered.xml
