bin: Quality of life improvements (#3199)
Fix #00000

--- a/bin/conf/trytond.conf
+++ b/bin/conf/trytond.conf
@@ -178,7 +178,13 @@ record = 10000
 #       instance to share cache information across trytond processes
 # Can be overriden with $TRYTOND_CACHE_CLASS
 # default: trytond.cache.SerializableMemoryCache
-class = trytond.cache_redis.RedisCache
+
+# (coog_core) clean_timeout: The duration (in seconds) of the validity of
+# cached data for (Serializable)MemoryCache
+# If set to 0, and the database supports it, it will use the NOTIFY / LISTEN
+# pattern through the database to transactionally clean the cache
+# default: 300
+clean_timeout = 0
 
 # (coog_core) uri: For redis class cache, the uri of the redis instance /
 # database to use
@@ -261,6 +267,27 @@ server_shared_folder = /tmp
 # example: \\WORKSPACE\shared_files\Coog
 client_shared_folder = /tmp
 xml_dir = /tmp
+
+########
+# BDOC #
+########
+[bdoc]
+# (report_engine_bdoc) export_root_dir: The directory in which generated bdoc
+# template files will be stored, relative to the main IO folder of Coog
+# default: /export
+
+##############################
+# Document API configuration #
+##############################
+[document_api]
+# (document_request) document_token_secret: The secret key that will be used to
+# generate the tokens for single-use document input APIs
+# default: not set
+
+# (document_request) document_token_expiration_minutes: The duration for which
+# a generated token will be valid
+# default: 1440
+
 
 ###########
 # Options #
