all: fix migration section declaration in trytond.conf (#3208)

--- a/bin/conf/trytond.conf
+++ b/bin/conf/trytond.conf
@@ -437,7 +437,7 @@ disable_syntax_analysis = True
 ############
 # Migrator #
 ############
-[migrator]
+[migration]
 # (migrator) host: The host of the source database for migrating
 # (migrator) user: The user of the source database for migrating
 # (migrator) password: The password of the source database for migrating
