endorsement: Administrative endorsements through APIs (#3145)
Fix #12704

--- a/modules/endorsement/tryton.cfg
+++ b/modules/endorsement/tryton.cfg
@@ -9,6 +9,7 @@ depends:
 extras_depend:
     event_log
     document
+    api
 xml:
     icons.xml
     endorsement.xml
@@ -22,3 +23,4 @@ xml:
     authorizations.xml
     rule_engine.xml
     message.xml
+    api.xml
