--- a/modules/endorsement_insurance_invoice/tryton.cfg
+++ b/modules/endorsement_insurance_invoice/tryton.cfg
@@ -6,10 +6,14 @@ depends:
     contract_insurance_invoice
     endorsement_insurance
     endorsement_premium
+extras_depend:
+    claim
+    api
 xml:
     endorsement.xml
     offered.xml
     wizard.xml
     configuration.xml
+    api.xml
     authorizations.xml
     message.xml
