--- a/modules/endorsement_insurance_invoice_sepa/tryton.cfg
+++ b/modules/endorsement_insurance_invoice_sepa/tryton.cfg
@@ -5,6 +5,8 @@ depends:
     res
     endorsement_insurance_invoice
     account_payment_sepa_contract
+extras_depend:
+    api
 xml:
     offered.xml
     wizard.xml
