--- a/modules/endorsement_party/tryton.cfg
+++ b/modules/endorsement_party/tryton.cfg
@@ -9,6 +9,7 @@ depends:
     contract_insurance
 extras_depend:
     party_ssn
+    api
 xml:
     offered.xml
     endorsement.xml
@@ -16,3 +17,4 @@ xml:
     party.xml
     authorizations.xml
     message.xml
+    api.xml
