web_configuration: Manage front end resources  (#3188)
Fix #12675

--- a/modules/distribution/tryton.cfg
+++ b/modules/distribution/tryton.cfg
@@ -6,9 +6,14 @@ depends:
     coog_core
     company_cog
     party_cog
+extras_depend:
+    api
+    web_configuration
 xml:
     distribution.xml
     test_case.xml
     general_configuration.xml
     res.xml
     authorization.xml
+    api.xml
+    web_configuration.xml
