--- a/modules/offered/tryton.cfg
+++ b/modules/offered/tryton.cfg
@@ -8,8 +8,10 @@ depends:
     rule_engine
     report_engine
 extras_depend:
+    api
     report_engine_flow
     report_engine_email
+    web_configuration
 xml:
     icon.xml
     offered.xml
@@ -21,3 +23,4 @@ xml:
     api.xml
     report_template.xml
     message.xml
+    web_configuration.xml
