document_request_electronic_signature: Trigger an event when signature is complete (#3209)
Fix #12876

--- a/modules/contract_insurance_document_request/tryton.cfg
+++ b/modules/contract_insurance_document_request/tryton.cfg
@@ -8,6 +8,8 @@ depends:
     document_request
     offered_insurance
     contract_insurance
+extras_depend:
+    event_log
 xml:
     offered.xml
     contract.xml
