contract_insurance_invoice: Add quotation API (#3235)
Fix #12980

--- a/bin/conf/trytond.conf
+++ b/bin/conf/trytond.conf
@@ -22,6 +22,16 @@ listen = localhost:8000
 # printed at INFO level, other as DEBUG
 # example: log_time_threshold = 0.1
 
+# (coog_core) format_parameters_logs: If True, the parameters of RPC calls will
+# be pretty-printed if logging is in DEBUG model
+# default: False
+format_parameters_logs = True
+
+# (coog_core) format_result_logs: If True, the response of RPC calls will be
+# pretty-printed if logging is in DEBUG model
+# default: False
+format_result_logs = True
+
 ####################
 # Database Section #
 ####################
