contract_premium_modification: Manage discounts in subscription API
Ref #12989

--- a/modules/contract_premium_modification/tryton.cfg
+++ b/modules/contract_premium_modification/tryton.cfg
@@ -6,6 +6,8 @@ depends:
     coog_core
     rule_engine
     contract_insurance_invoice
+extras_depend:
+    api
 xml:
     wizard.xml
     waiver.xml
