--- a/modules/contract_distribution/tryton.cfg
+++ b/modules/contract_distribution/tryton.cfg
@@ -11,6 +11,7 @@ extras_depend:
     api
     contract_process
     contract_insurance_invoice
+    web_configuration
 xml:
     distribution.xml
     contract.xml
