offered: Add extra_data_group for questionnaire parts
Ref #13077

--- a/modules/questionnaire/tryton.cfg
+++ b/modules/questionnaire/tryton.cfg
@@ -12,6 +12,7 @@ extras_depend:
     contract
     contract_process
     contract_distribution
+    web_configuration
 xml:
     icons.xml
     questionnaire.xml
