coog_core: Auto cache read / search of configuration models (#3262)
Fix #13062

--- a/bin/conf/trytond.conf
+++ b/bin/conf/trytond.conf
@@ -211,6 +211,14 @@ uri = redis://localhost:6379/0
 # default: False
 disable_fields_view_get_cache = True
 
+# (coog_core) enable_auto_read_cache: If True, configuration objects reads will
+# be automatically cached when possible
+# default: True
+
+# (coog_core) enable_auto_search_cache: If True, configuration objects searches
+# will be automatically cached when possible
+# default: True
+
 ##########
 # Report #
 ##########
