coog_core: Remove upper case in trytond varibales (#3063)
OTH#00000

--- a/bin/conf/trytond.conf
+++ b/bin/conf/trytond.conf
@@ -259,7 +259,7 @@ unoconv = True
 #######
 # TMP #
 #######
-[TMP]
+[tmp]
 # (coog_core) folder: Where temporary folder will be created when using file
 # locks
 # default: /tmp
@@ -274,7 +274,7 @@ unoconv = True
 #######
 # EDM #
 #######
-[EDM]
+[edm]
 # (report_engine) server_shared_folder: The place in which the generated
 # documents will be placed by the server
 # default: /tmp
