claim_group_life_fr: revaluate basic salary deduction period (#3437)
claim_group_life_fr: revaluate basic salary deduction period (#3089)

Fix #11792

--- a/modules/claim_group_life_fr/tryton.cfg
+++ b/modules/claim_group_life_fr/tryton.cfg
@@ -5,14 +5,16 @@ depends:
     res
     coog_core
     claim_life
-    claim_indemnification
+    claim_indemnification_group
     claim_deduction_period
 extras_depend:
     claim_eligibility
     claim_salary_fr
+    endorsement_option_benefit
 xml:
     claim.xml
     benefit.xml
     rule_engine.xml
+    contract.xml
     authorizations.xml
     message.xml
