--- a/bin/conf/trytond.conf
+++ b/bin/conf/trytond.conf
@@ -468,3 +468,34 @@ disable_syntax_analysis = True
 [bus]
 # (bus) allow_subscribe: Activate client notifications
 allow_subscribe = 1
+
+################
+# Batch Report #
+################
+[batch_report]
+# (batch_report) uri: The URI to connect to the SMTP server.
+# Available protocols are:
+# - smtp: simple SMTP
+# - smtp+tls: SMTP with STARTTLS
+# - smtps: SMTP with SSL
+# no default
+uri = smtp://localhost:25
+
+# (batch_report) fromemail: : The From address used to send batch report email.
+# no default
+# fromemail = coopengo@gmail.com
+
+# (batch_report) toemail: the To address used to send batch report email
+# no default
+# toemail = batch_report@yopmail.com
+
+# (batch_report) env_name: Tag used to identify the environment the batches has run on
+# env_name = Ordinateur Nidhal
+
+# (batch_report) extra_redis: the redis uri for storing batch extra info
+# no default
+extra_redis = redis://localhost:6379/14
+
+# (batch_report) template: the genshi template used to generate mail
+# default (coog_directory)/coog/bin/bin/template/default_batch_template.html
+# template = /home/nidhal/workspace/gie/coog/bin/bin/template/default_batch_template.html
