global_tests: One does not simply kill people

--- a/modules/claim_pasrau/tryton.cfg
+++ b/modules/claim_pasrau/tryton.cfg
@@ -10,6 +10,7 @@ depends:
     party_ssn
     account_invoice_slip
     dsn_standard
+    account_invoice_cog
 xml:
     pasrau.xml
     default_rates.xml
