report_engine_email: Send empty paper form associated to request line by e-mail (#3519)
Fix #14120

--- a/modules/document_request/tryton.cfg
+++ b/modules/document_request/tryton.cfg
@@ -11,6 +11,7 @@ depends:
 extras_depend:
     offered
     web_configuration
+    report_engine_email
 xml:
     icons.xml
     document.xml
@@ -18,3 +19,4 @@ xml:
     event.xml
     authorizations.xml
     message.xml
+    document_mail.xml
