doc: Update default trytond.conf with ldap documentation

--- a/bin/conf/trytond.conf
+++ b/bin/conf/trytond.conf
@@ -120,7 +120,10 @@ super_pwd =
 # default: 5
 
 # authentications: The authentications methods to use for login. New methods
-# can be added by custom modules
+# can be added by custom modules. Typically, the ldap module allows to use the
+# "ldap" method. If multiple modes are allowed, they must be separated using a
+# comma
+# example: password,ldap
 # default: password
 
 # use redis as a session store
@@ -242,12 +245,23 @@ unoconv = True
 # Ldap Authentication #
 # #####################
 [ldap_authentication]
-# uri: The URI to connect to the LDAP server.
-#
+# (ldap) uri: The URI to connect to the LDAP server. Follows RFC-2255.
 #   uri = ldap://host:port/dn?attributes?scope?filter?extensions
 #
 # A basic default URL could look like
 # uri = ldap://localhost:389/
+# default: not set
+
+# (ldap) bind_pass: The LDAP password tht will be used to bind to the ldap
+# server if needed
+# default: not set
+
+# (ldap) uid: The UID that will be used for authenticating
+# default: uid
+
+# (ldap) create_user: If True, a user allowed to connect through LDAP will have
+# a user created automatically in Coog if it does not already exist
+# default: False
 
 #######
 # Env #
