third_party_right_management: Hide Recompute Period action for quotes (#3662)
Fix #14655

--- a/modules/third_party_right_management/tryton.cfg
+++ b/modules/third_party_right_management/tryton.cfg
@@ -13,6 +13,7 @@ extras_depend:
     contract_insurance_suspension
     endorsement
 xml:
+    contract.xml
     offered.xml
     protocol.xml
     endorsement.xml
